--- a/examples/2_quick_temp_score_calculation.ipynb
+++ b/examples/2_quick_temp_score_calculation.ipynb
@@ -30,12 +30,12 @@
    },
    "outputs": [],
    "source": [
-    "!pip install SBTi"
+    "%pip install sbti-finance-tool"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -59,14 +59,14 @@
    "metadata": {},
    "source": [
     "## Download the dummy data provider\n",
-    "We have prepared dummy data for you to be able to run the tool as it is to familiarise yourself with how it works. To use your own data; please check out to the [Data Requirements section](https://ofbdabv.github.io/SBTi/DataRequirements.html) of the technical documentation for more details on data requirements and formatting. \n",
+    "We have prepared dummy data for you to be able to run the tool as it is to familiarise yourself with how it works. To use your own data; please check out to the [Data Requirements section](https://sciencebasedtargets.github.io/SBTi/DataRequirements.html) of the technical documentation for more details on data requirements and formatting. \n",
     "\n",
     "*The dummy data may include some company names, but the data associated with those company names is completely random and any similarities with real world data is purely coincidental. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -80,9 +80,9 @@
     "if not os.path.isdir(\"data\"):\n",
     "    os.mkdir(\"data\")\n",
     "if not os.path.isfile(\"data/data_provider_example.xlsx\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/master/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
+    "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/main/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
     "if not os.path.isfile(\"data/example_portfolio.csv\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/master/examples/data/example_portfolio.csv\", \"data/example_portfolio.csv\")"
+    "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/main/examples/data/example_portfolio.csv\", \"data/example_portfolio.csv\")"
    ]
   },
   {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -136,12 +136,12 @@
     "## Load your portfolio\n",
     "In our case the portfolio is stored as a CSV file. The portfolio should at least have an \"id\" (the identifier of the company) and a \"proportion\" (the weight of the company in your portfolio e.g. the value of the shares you hold) column.\n",
     "\n",
-    "Please see the technical documentation on [Data Legends](https://ofbdabv.github.io/SBTi/Legends.html#) for details on data requirements. "
+    "Please see the technical documentation on [Data Legends](https://sciencebasedtargets.github.io/SBTi/Legends.html#) for details on data requirements. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -154,113 +154,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>company_name</th>\n",
-       "      <th>company_id</th>\n",
-       "      <th>company_isin</th>\n",
-       "      <th>weights</th>\n",
-       "      <th>investment_value</th>\n",
-       "      <th>engagement_target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Company AG</td>\n",
-       "      <td>US0079031078</td>\n",
-       "      <td>US0079031078</td>\n",
-       "      <td>6.36%</td>\n",
-       "      <td>35000000</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Company AH</td>\n",
-       "      <td>US00724F1012</td>\n",
-       "      <td>US00724F1012</td>\n",
-       "      <td>1.82%</td>\n",
-       "      <td>10000000</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Company AI</td>\n",
-       "      <td>FR0000125338</td>\n",
-       "      <td>FR0000125338</td>\n",
-       "      <td>1.82%</td>\n",
-       "      <td>10000000</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Company AJ</td>\n",
-       "      <td>US17275R1023</td>\n",
-       "      <td>US17275R1023</td>\n",
-       "      <td>1.82%</td>\n",
-       "      <td>10000000</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Company AK</td>\n",
-       "      <td>CH0198251305</td>\n",
-       "      <td>CH0198251305</td>\n",
-       "      <td>1.82%</td>\n",
-       "      <td>10000000</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  company_name    company_id  company_isin weights  investment_value  \\\n",
-       "0   Company AG  US0079031078  US0079031078   6.36%          35000000   \n",
-       "1   Company AH  US00724F1012  US00724F1012   1.82%          10000000   \n",
-       "2   Company AI  FR0000125338  FR0000125338   1.82%          10000000   \n",
-       "3   Company AJ  US17275R1023  US17275R1023   1.82%          10000000   \n",
-       "4   Company AK  CH0198251305  CH0198251305   1.82%          10000000   \n",
-       "\n",
-       "  engagement_target  \n",
-       "0              True  \n",
-       "1               NaN  \n",
-       "2               NaN  \n",
-       "3               NaN  \n",
-       "4               NaN  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_portfolio.head(5)"
    ]
@@ -269,12 +169,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To load the data from the data provider, we have to pass a list of IPortfolioCompany instances. The module has a strict [data model](https://ofbdabv.github.io/SBTi/autoapi/SBTi/interfaces/index.html) to convert Pandas Dataframe to the right object types we supplied a utility function.\n"
+    "To load the data from the data provider, we have to pass a list of IPortfolioCompany instances. The module has a strict [data model](https://sciencebasedtargets.github.io/SBTi-finance-tool/autoapi/SBTi/interfaces/index.html) to convert Pandas Dataframe to the right object types we supplied a utility function.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -295,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -320,126 +220,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>company_name</th>\n",
-       "      <th>time_frame</th>\n",
-       "      <th>scope</th>\n",
-       "      <th>temperature_score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Company AG</td>\n",
-       "      <td>SHORT</td>\n",
-       "      <td>S1S2</td>\n",
-       "      <td>1.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Company AG</td>\n",
-       "      <td>SHORT</td>\n",
-       "      <td>S3</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Company AG</td>\n",
-       "      <td>SHORT</td>\n",
-       "      <td>S1S2S3</td>\n",
-       "      <td>0.35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Company AG</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>S1S2</td>\n",
-       "      <td>1.36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Company AG</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>S3</td>\n",
-       "      <td>3.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Company AG</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>S1S2S3</td>\n",
-       "      <td>2.70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Company AG</td>\n",
-       "      <td>LONG</td>\n",
-       "      <td>S1S2</td>\n",
-       "      <td>3.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Company AG</td>\n",
-       "      <td>LONG</td>\n",
-       "      <td>S3</td>\n",
-       "      <td>3.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Company AG</td>\n",
-       "      <td>LONG</td>\n",
-       "      <td>S1S2S3</td>\n",
-       "      <td>3.20</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  company_name time_frame   scope  temperature_score\n",
-       "0   Company AG      SHORT    S1S2               1.30\n",
-       "1   Company AG      SHORT      S3               0.00\n",
-       "2   Company AG      SHORT  S1S2S3               0.35\n",
-       "3   Company AG        MID    S1S2               1.36\n",
-       "4   Company AG        MID      S3               3.20\n",
-       "5   Company AG        MID  S1S2S3               2.70\n",
-       "6   Company AG       LONG    S1S2               3.20\n",
-       "7   Company AG       LONG      S3               3.20\n",
-       "8   Company AG       LONG  S1S2S3               3.20"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "amended_portfolio[['company_name', 'time_frame', 'scope', 'temperature_score']].head(9)"
    ]
@@ -454,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,72 +250,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>short</th>\n",
-       "      <th>mid</th>\n",
-       "      <th>long</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>S1S2</th>\n",
-       "      <td>2.54</td>\n",
-       "      <td>2.63</td>\n",
-       "      <td>3.16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>S3</th>\n",
-       "      <td>2.93</td>\n",
-       "      <td>2.98</td>\n",
-       "      <td>3.23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>S1S2S3</th>\n",
-       "      <td>2.83</td>\n",
-       "      <td>2.88</td>\n",
-       "      <td>3.21</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        short   mid  long\n",
-       "S1S2     2.54  2.63  3.16\n",
-       "S3       2.93  2.98  3.23\n",
-       "S1S2S3   2.83  2.88  3.21"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Here we cast a ScoreAggregation object to a Pandas Dataframe for viewing the temp scores in a human readable way\n",
     "pd.DataFrame(aggregated_scores.dict()).applymap(lambda x: round(x['all']['score'], 2))"
@@ -547,21 +273,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Portfolio coverage is: 35.45%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "portfolio_coverage_tvp = PortfolioCoverageTVP()\n",
     "coverage = portfolio_coverage_tvp.get_portfolio_coverage(amended_portfolio.copy(), PortfolioAggregationMethod.WATS)\n",
@@ -585,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.6"
   },
   "pycharm": {
    "stem_cell": {
