Updates to NB #6

--- a/examples/6_compare_temps_SP.ipynb
+++ b/examples/6_compare_temps_SP.ipynb
@@ -52,7 +52,7 @@
     }
    ],
    "source": [
-    "!pip install SBTi-finance-tool"
+    "%pip install SBTi-finance-tool"
    ]
   },
   {
@@ -74,15 +74,6 @@
     "from SBTi.target_validation import TargetProtocol\n",
     "from SBTi.interfaces import ETimeFrames, EScope\n",
     "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TargetProtocol.validate??"
    ]
   },
   {
@@ -1432,15 +1423,6 @@
    "outputs": [],
    "source": [
     "df_diff_with_targets.to_csv(\"data/BBG_validation3/temp_compare_targets.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TargetProtocol._combine_s1_??"
    ]
   }
  ],
