--- a/examples/4b_portfolio_agg_readymade_TS.ipynb
+++ b/examples/4b_portfolio_agg_readymade_TS.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# SBTi-Finance Tool - Aggregation of ready made Temperature Scores\n",
-    "This notebook can be used to run portfolio aggregation using files with ready made Temperature Scored from data providers. See notebooks #1 and #4 for more details on portfolio aggregation. \n",
+    "This notebook can be used to run portfolio aggregation using files with ready made Temperature Scores from data providers. See notebooks #1 and #4 for more details on portfolio aggregation. \n",
     "\n",
     "Please see the [methodology](https://sciencebasedtargets.org/wp-content/uploads/2020/09/Temperature-Rating-Methodology-V1.pdf), [guidance](https://sciencebasedtargets.org/wp-content/uploads/2020/10/Financial-Sector-Science-Based-Targets-Guidance-Pilot-Version.pdf) and the [technical documentation](https://sciencebasedtargets.github.io/SBTi-finance-tool/)  for more details on the different aggregation methods.\n",
     "\n",
@@ -91,6 +91,8 @@
     "# Convert the scope and time_frame columns to enums (EScope and ETimeFrames)\n",
     "df_portfolio['scope'] = df_portfolio['scope'].apply(lambda x: EScope[x.upper()])\n",
     "df_portfolio['time_frame'] = df_portfolio['time_frame'].apply(lambda x: ETimeFrames[x.upper()])\n",
+    "if not 'temperature_results' in df_portfolio.columns:\n",
+    "    df_portfolio['temperature_results'] = 0\n",
     "# Create a dictionary to store the portfolio scores for different aggregation methods\n",
     "scores_collection = {}"
    ]
@@ -157,7 +159,7 @@
    "outputs": [],
    "source": [
     "ts.aggregation_method = PortfolioAggregationMethod.TETS\n",
-    "aggregated_scores = ta.aggregate_scores(df_portfolio)\n",
+    "aggregated_scores = ts.aggregate_scores(df_portfolio)\n",
     "df_tets = pd.DataFrame(aggregated_scores.dict()).applymap(lambda x: round(x['all']['score'], 2))\n",
     "scores_collection.update({'TETS': df_tets})\n",
     "df_tets"
