Fixed error in notebook 4b

--- a/examples/4b_portfolio_agg_readymade_TS.ipynb
+++ b/examples/4b_portfolio_agg_readymade_TS.ipynb
@@ -69,7 +69,7 @@
    "outputs": [],
    "source": [
     "# Create a temperature score instance with the desired time frames and scopes\n",
-    "ts = TemperatureScore(time_frames=list(ETimeFrames.SHORT, ETimeFrames.MID, ETimeFrames.LONG), \n",
+    "ts = TemperatureScore(time_frames=[ETimeFrames.SHORT, ETimeFrames.MID, ETimeFrames.LONG], \n",
     "    scopes=[EScope.S1S2, EScope.S3, EScope.S1S2S3])"
    ]
   },
