Update install in NB#1

--- a/examples/1_analysis_example.ipynb
+++ b/examples/1_analysis_example.ipynb
@@ -252,11 +252,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install sbti-finance-tool\n",
-    "\n",
-    "# Install other Python modules required to use this notebook\n",
-    "%pip install matplotlib==3.2.2\n",
-    "%pip install openpyxl==3.0.9"
+    "%pip install sbti-finance-tool "
    ]
   },
   {
@@ -1144,7 +1140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.6"
   },
   "pycharm": {
    "stem_cell": {
